k8s/backend.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: cloudops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: n00shy/cloudops-backend:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8081

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
