k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: cloudops

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - port: 8081
      targetPort: 8081
