k8s/postgres-service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: cloudops

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
